# NyayaAI

./: .editorconfig  .env.example  .firebaserc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  SECURITY.md  [EXT] Solution Challenge 2026 - Prototype PPT Template (1).pptx  evaluationCriteria.txt  firebase.json  package.json  pnpm-workspace.yaml  problemStatement.txt  pyproject.toml  skills-lock.json
.claude/agents/: agent-architect.md  compliance-auditor.md  fairness-engineer.md  flutter-engineer.md  gsc-submission-reviewer.md  infra-security-engineer.md  product-research-lead.md
.claude/skills/nyayai-adk-agent-patterns/: SKILL.md
.claude/skills/nyayai-bias-metrics/: SKILL.md
.claude/skills/nyayai-dpdp-compliance/: SKILL.md
.claude/skills/nyayai-gsc-submission/: SKILL.md
.claude/skills/nyayai-india-taxonomy/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  eval.yml
apps/flutter/: README.md  analysis_options.yaml  pubspec.yaml
apps/flutter/lib/: firebase_options.dart  main.dart
apps/flutter/lib/app/: app.dart  router.dart  theme.dart
apps/flutter/lib/features/audit/: agent_timeline_state.dart  audit_form_controller.dart  audit_form_screen.dart  audit_form_state.dart  audit_report_provider.dart  audit_result_view.dart  narrative_language.dart  regime_hints.dart
apps/flutter/lib/features/auth/: auth_provider.dart  sign_in_screen.dart
apps/flutter/lib/features/compare/: compare_screen.dart
apps/flutter/test/: api_client_test.dart  audit_form_screen_test.dart
apps/flutter/web/: flutter_bootstrap.js  index.html  manifest.json
benchmarks/: README.md
benchmarks/compas/: REPORT.md  dataset.card.md  fetch.py  run.sh
benchmarks/compas/artifacts/: pairwise_black_white.json  report.json
benchmarks/compas/data/: compas.parquet
benchmarks/mudra-lite/: dataset.card.md  generate.py  run.sh
benchmarks/mudra-lite/data/: mudra-lite.parquet
benchmarks/uci-adult/: REPORT.md  dataset.card.md  fetch.py  run.sh
benchmarks/uci-adult/artifacts/: report.json
benchmarks/uci-adult/data/: adult.parquet
docs/: ACCESSIBILITY.md  COMPLIANCE.md  DEMO_SCENARIO.md  IMPACT.md  PITCH_DECK_GSC.md  PITCH_DECK_OUTLINE.md  README.md  SECURITY.md  VIDEO_SCRIPT.md  VIDEO_SHOT_LIST.md
docs/MODEL_CARDS/: README.md
docs/announcements/: README.md
docs/architecture/: README.md  architecture.mmd
docs/letters/: outreach-template.md
docs/screenshots/: audit_meta.json
infra/terraform/: README.md
scripts/: bootstrap.sh
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/nyayai_api/: __init__.py  app.py  samples.py  schemas.py  settings.py  ui.py
services/api/tests/: test_api.py
services/fairness/: README.md  pyproject.toml
services/fairness/src/nyayai_fairness/: __init__.py  audit.py  cli.py  dp.py  ingest.py  schemas.py
services/fairness/tests/: test_audit.py  test_train_baseline.py
services/orchestrator/: README.md  pyproject.toml
services/orchestrator/evals/: run_evals.py
services/orchestrator/evals/goldens/: narrator_mudra.json  planner_basic.json
services/orchestrator/src/nyayai_orchestrator/: __init__.py  config.py  orchestrator.py  schemas.py
services/orchestrator/src/nyayai_orchestrator/agents/: __init__.py  counterfactual.py  narrator.py  planner.py  remediation.py  root_cause.py  watcher.py
services/orchestrator/src/nyayai_orchestrator/guardrails/: __init__.py  model_armor.py  sdp.py
services/orchestrator/src/nyayai_orchestrator/llm/: __init__.py  base.py  factory.py  stub.py  vertex.py
services/orchestrator/src/nyayai_orchestrator/tools/: __init__.py  fairness_tool.py  remediation_tool.py  report_tool.py
services/orchestrator/tests/: conftest.py  test_agents.py  test_counterfactual_agent.py  test_llm_stub.py  test_orchestrator.py  test_remediation_agent.py  test_remediation_tool.py  test_root_cause_agent.py
services/reporter/: README.md  pyproject.toml
services/reporter/src/nyayai_reporter/: __init__.py  render.py
services/reporter/src/nyayai_reporter/templates/: report.html.j2
services/reporter/tests/: test_render.py
services/watcher/: README.md
(+25 files in other folders)
