[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyayai-api"
version = "0.1.0"
description = "NyayaAI HTTP gateway — uploads + orchestrator invocation + report download."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "NyayaAI Team" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.12",
  "pandas>=2.2",
  "pyarrow>=18",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "nyayai-orchestrator",
  "nyayai-fairness",
  "nyayai-reporter",
  "nyayai-taxonomy",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/nyayai_api"]
