[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyayai-fairness"
version = "0.1.0"
description = "NyayaAI classical fairness-metrics service (Agent 3). Deterministic; no LLMs."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "NyayaAI Team", email = "team@nyayai.app" }]
dependencies = [
  "fairlearn>=0.12",
  "scikit-learn>=1.6",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "pydantic>=2.6",
  "nyayai-taxonomy",
  "nyayai-fairlearn-ext",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "hypothesis>=6.100",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nyayai_fairness"]

[tool.uv.sources]
nyayai-taxonomy = { workspace = true }
nyayai-fairlearn-ext = { workspace = true }

[tool.ruff]
extend = "../../pyproject.toml"

[tool.mypy]
python_version = "3.12"
strict = true
