[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyayai-reporter"
version = "0.1.0"
description = "NyayaAI report renderer: AuditReport -> HTML/PDF/JSON with DPDP Rule 13 annex."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "NyayaAI Team" }]
dependencies = [
  "jinja2>=3.1.4",
  "pydantic>=2.9",
  "nyayai-orchestrator",
  "nyayai-fairness",
]

[project.optional-dependencies]
pdf = ["weasyprint>=63"]
test = ["pytest>=8", "beautifulsoup4>=4.12"]

[tool.hatch.build.targets.wheel]
packages = ["src/nyayai_reporter"]

[tool.hatch.build.targets.wheel.force-include]
"src/nyayai_reporter/templates" = "nyayai_reporter/templates"
"src/nyayai_reporter/assets" = "nyayai_reporter/assets"
